<?xml version="1.0"?>
<package format="3">
  <name>logging_demo</name>
  <version>0.0.1</version>
  <description>ROS 2 C++ logging example package with all logging types and formats</description>

  <maintainer email="changgeun.usa@gmail.com">changgeun</maintainer>
  <license>Apache-2.0</license>

  <!-- build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>

  <!-- execution dependencies -->
  <exec_depend>rclcpp</exec_depend>

  <!-- test dependencies (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
